# vacancy_search_project_two

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/: file_utils.py  utils.py  vacancy_api_handler.py  vacancy_services.py  vacancy_storage_json.py
tests/: conftest.py  test_file_utils.py  test_utils.py  test_vacancy_api_handler.py  test_vacancy_services.py  test_vacancy_storage_json.py
